--- a/list/src/main/AndroidManifest.xml
+++ b/list/src/main/AndroidManifest.xml
@@ -1,2 +1,18 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.zhengyinuo.list" />
+    package="com.zhengyinuo.list">
+
+    <application
+        android:theme="@style/AppTheme"
+        android:allowBackup="true"
+       >
+        <activity android:name=".ListActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+    </application>
+
+</manifest>
