--- a/list/build.gradle
+++ b/list/build.gradle
@@ -7,22 +7,23 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion compile_sdk_version.toInteger()
-    buildToolsVersion build_tools_version
+
+    compileSdkVersion app_android.compileSdkVersion
+    buildToolsVersion app_android.buildToolsVersion
 
     defaultConfig {
         if (is_application.toBoolean()) {
             applicationId "com.zhengyinuo.list"
         }
+        minSdkVersion app_android.minSdkVersion
+        targetSdkVersion app_android.targetSdkVersion
+        versionCode app_android.versionCode
+        versionName app_android.versionName
 
-        minSdkVersion min_sdk_version.toInteger()
-        targetSdkVersion target_sdk_version.toInteger()
-        versionCode version_code.toInteger()
-        versionName version_name
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles 'consumer-rules.pro'
+        testInstrumentationRunner app_android.testInstrumentationRunner
+        consumerProguardFiles app_android.consumerProguardFiles
     }
+
 
     buildTypes {
         release {
@@ -32,7 +33,7 @@ android {
     }
 
     sourceSets {
-        main{
+        main {
             if (is_application.toBoolean()) {
                 manifest.srcFile 'src/main/AndroidManifest.xml'
             } else {
@@ -45,15 +46,11 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "androidx.appcompat:appcompat:${app_compat}"
-    implementation "androidx.core:core-ktx:${core_ktx}"
-    implementation "androidx.appcompat:appcompat:$app_compat"
-    implementation "androidx.constraintlayout:constraintlayout:$constraintlayout"
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-
+    base_dependencies.each { key, value ->
+        implementation value
+    }
+    testImplementation app_dependencies.junit
+    androidTestImplementation app_dependencies.ext_junit
+    androidTestImplementation app_dependencies.espresso
     implementation project(path: ':base')
 }
